# OCamlEvaluator

./: .gitignore  OCamlEvaluator.opam  README.md  TAGS  a.out  bugs.txt  dune-project  expression.ml  lexer.mll  makefile  oeval.ml  operation.ml  parser.mly  repl.ml
src/: base.ml  convert.ml  derivate.ml  eval.ml  expression.ml  function.ml  lexer.mll  oeval copy.ml  oeval.ml  operation.ml  parser.mly  plot.ml  repl.ml  solve.ml
test/: defs.def  dune  test.sh  test_base.exp  test_base.in  test_convert.exp  test_convert.in  test_defs.exp  test_defs.in  test_derivate.exp  test_derivate.in  test_evaluate.exp  test_evaluate.in  test_simplify.exp  test_simplify.in
